<resources>
    <string name="app_name">Currency Exchange</string>
    <string name="exchangeButton">Convert</string>
    <string name="sgd_spinner_text">SGD</string>
    <string name="rate_table_text">Rate Table</string>
    <string name="inputText">1</string>
    <string name="refreshText">Refresh</string>
    <string name="setting_name">Settings</string>
    <string name="theme_choices_text">Theme Choices</string>
    <string name="background_1_text">Background 1</string>
    <string name="background_2_text">Background 2</string>
    <string name="background_3_Text">Background 3</string>
    <string name="back_Text">Back</string>
    <string name="background_4_Text">Background 4</string>

    <string-array name="currency_list">
        <item>SGD</item>
        <item>USD</item>
        <item>AUD</item>
        <item>NZD</item>
        <item>EUR</item>
        <item>CAD</item>
        <item>PHP</item>
        <item>HKD</item>
        <item>THB</item>
        <item>CNY</item>
    </string-array>
</resources>
