<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".setting_options"
    android:id="@+id/linear_background">

    <include
        layout="@layout/action_bar"
        android:id="@+id/action_bar_option">

    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/themeText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/theme_choices_text"
            android:textSize="30sp"
            android:gravity="center"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center">

        <Button
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/background_1_text"
            android:textSize="30sp"
            android:onClick="Background_1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center">

        <Button
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/background_2_text"
            android:textSize="30sp"
            android:onClick="Background_2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center">

        <Button
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/background_3_Text"
            android:textSize="30sp"
            android:onClick="Background_3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center">

        <Button
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/back_Text"
            android:textSize="30sp"
            android:onClick="Back"/>
    </LinearLayout>

</LinearLayout>